--- a/src/app/child-dashboard/child-game-dasboard/child-game-dasboard.component.html
+++ b/src/app/child-dashboard/child-game-dasboard/child-game-dasboard.component.html
@@ -2,6 +2,7 @@
 <div>
 
 </div>
+<div class="full-screen" [ngStyle]="{'background-image': 'url(' + backroundDayOrder + ')'}">
 <div id="tinawelcome">
   <div class="tinawelcome" style="background-image:url('/assets/images/tinawelcom.gif')">
 
@@ -81,4 +82,5 @@
 
 </carousel>
 </ng-container>
+</div>
 </div>
