--- a/src/app/child-dashboard/child-game-dasboard/child-game-dasboard.component.css
+++ b/src/app/child-dashboard/child-game-dasboard/child-game-dasboard.component.css
@@ -1,305 +1,3 @@
-.game-title {
-  font-weight: bold;
-  font-family: 'GillSansStd-Light';
-}
-#nidarasession-main{
-  display: block;
-}
-.tinawelcome {
-    position: absolute;
-    width: 100%;
-    height:350px;
-    background-position: 0px 0px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-#tinawelcome{
-  display: none;
-}
-.tina{
-  text-align: center;
-}
-.tina img {
-  width: 50%;
-  height: auto;
-}
-.carousel-control .icon-prev {
-  width: 90px;
-  height: 159px;
-  margin-top: -100px;
-  background-image: url(../../../assets/games/general/arrow-left.png);
-  background-repeat: no-repeat;
-  font-size: 65px;
-}
-@media (min-width: 768px) {
-	.tinawelcome {
-    position: absolute;
-    width: 100%;
-    height:350px;
-    background-position: 0px 0px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-.carousel-control .icon-prev {
-  width: 90px;
-  height: 159px;
-  margin-top: -100px;
-  background-image: url(../../../assets/games/general/arrow-left.png);
-  background-repeat: no-repeat;
-  font-size: 65px;
-}
-.tina img {
-  width: 75%;
-  height: auto;
-}
-}
-@media (min-width: 992px) {
-	.tinawelcome {
-    position: absolute;
-    width: 100%;
-    height:350px;
-    background-position: 0px 0px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-.tina img {
-  width: 100%;
-  height: auto;
-}
-.carousel-control .icon-prev {
-  width: 90px;
-  height: 159px;
-  margin-top: -100px;
-  background-image: url(../../../assets/games/general/arrow-left.png);
-  background-repeat: no-repeat;
-  font-size: 65px;
-}
-}
-@media (min-width: 1200px) {
-	.tinawelcome {
-    position: absolute;
-    width: 100%;
-    height:350px;
-    background-position: 0px 0px;
-    background-repeat: no-repeat;
-    background-size: 100%;
-}
-.tina img {
-  width: 100%;
-  height: auto;
-}
-.carousel-control .icon-prev {
-  width: 90px;
-  height: 159px;
-  margin-top: -100px;
-  background-image: url(../../../assets/games/general/arrow-left.png);
-  background-repeat: no-repeat;
-  font-size: 65px;
-}
-}
-
-#fiximg-1{
-  display: none;
-}
-.game-title{
-  font-weight: bold;
-  font-family:"century-gothic";
-}
-h4{
-font-family: 'GillSansStd-Light';
-}
-#nidarasession{
-display: none;
-}
-#button-one{
-display: block;
-position: relative;
-width: 100%;
-margin: auto;
-height: 100%;
-top: 0px;
-padding-top:150px;
-}
-#wake-up{
-display: none;
-position: relative;
-width: 100%;
-margin: auto;
-height: 100%;
-top: 0px;
-padding-top:150px;
-}
-#sleep{
-display: none;
-position: relative;
-width: 100%;
-margin: auto;
-height: 100%;
-top: 0px;
-padding-top:150px;
-}
-#button-thiree{
-display: none;
-position: relative;
-width: 100%;
-margin: auto;
-height: 100%;
-top: 0px;
-padding-top:150px;
-}
-#button-two{
-display: none;
-position: relative;
-width: 100%;
-margin: auto;
-height: 100%;
-top: 0px;
-padding-top:150px;
-}
-.tinawelcome {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-position: 350px 0px;
-  background-repeat: no-repeat;
-  background-size: 50%;
-}
-#tinawelcome{
-display: none;
-}
-#tinaSleep{
-display: none;
-}
-#tinaWakeUp{
-display: none;
-}
-.tinawelcome {
-position: absolute;
-width: 100%;
-height: 260px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: contain;
-}
-#tinawelcome{
-display: none;
-}
-#mobile-dev{
-display: block;
-background: #fff;
-position: absolute;
-top:00px;
-left: 0;
-width: 100%;
-height: auto;
-z-index: 9999999;
-}
-#main-dev{
-display: none;
-}
-
-
-
-button.go-to-back {
-  background: #333;
-  border: 0px solid;
-  color: #fff;
-  width: 250px;
-  text-align: center;
-}
-button.go-to-back:hover{
-background: #83c9c0;
-}
-
-.content span {
-font-size: 18px;
-}
-.navbar-brand {
--webkit-transition: all 500ms ease-in-out;
-transition: all 500ms ease-in-out;
-float: none !important;
-text-align: center;
-margin: auto;
-height: 160px;
-}
-.navbar-brand {
-text-align: left;
-width: 150px;
-}
-
-div#center-div {
-margin: 50px auto;
-}
-
-.content {
-padding: 30px 50px 60px 50px;
-}
-
-
-@media (min-width: 768px) {
-.tinawelcome {
-position: absolute;
-width: 100%;
-height: 300px;
-background-position: center;
-background-repeat: no-repeat;
-background-size: contain;
-}
-#main-dev{
-display: block;
-}
-#mobile-dev{
-display: none;
-}
-}
-@media (min-width: 992px) {
-.tinawelcome {
-position: absolute;
-width: 100%;
-height: 100%;
-background-position: top center;
-background-repeat: no-repeat;
-background-size: contain;
-}
-#main-dev{
-display: block;
-}
-#mobile-dev{
-display: none;
-}
-}
-@media (min-width: 1200px) {
-.tinawelcome {
-position: absolute;
-width: 100%;
-height: 100%;
-background-position: top center;
-background-repeat: no-repeat;
-background-size: contain;
-}
-#main-dev{
-display: block;
-}
-#mobile-dev{
-display: none;
-}
-}
-
-
-.pop-image {
-width: 150px;
-height: 150px;
-margin: 0px;
-padding: 0px;
-}
-div#send-form {
-width: 350px;
-display: block;
-margin: auto;
-}
-
-
-
 
 #fiximg-2 img {
   width: 50%;
@@ -425,6 +123,10 @@ ul{
   height: 100%;
 }
 
+.game-img-holder.clearfix.single{
+  height: auto;
+}
+
 .game-img-holder.clearfix {
   height: 170px;
     position: relative;
@@ -436,7 +138,7 @@ ul{
 
 
 @media (min-width: 768px) {
-    .tinawelcome {
+	.tinawelcome {
     position: absolute;
     width: 100%;
     height:350px;
@@ -506,7 +208,7 @@ ul{
 
 }
 @media (min-width: 992px) {
-    .tinawelcome {
+	.tinawelcome {
     position: absolute;
     width: 100%;
     height:350px;
@@ -569,7 +271,7 @@ ul{
 
 }
 @media (min-width: 1200px) {
-    .tinawelcome {
+	.tinawelcome {
     position: absolute;
     width: 100%;
     height:350px;
