--- a/src/app/child-dashboard/child-game-dasboard/child-game-dasboard.component.html
+++ b/src/app/child-dashboard/child-game-dasboard/child-game-dasboard.component.html
@@ -18,67 +18,61 @@
 
 </ng-container>
 <ng-container *ngIf="childCheck > 0">
-<carousel  [interval]=false #slider>
-  <slide *ngFor="let slides of gameSlides; let n = index">
-
-    <section class="game-dashboad-bg game-dashboard-block" [ngStyle]="{'background-image': 'url(' + backroundDayOrder + ')'}">
-      <div class="container">
-        <div class="row game-block">
-          <div class="col-lg-4 col-md-4 col-sm-4">
-            
-            <div class="tina clearfix" id="fiximg-2" innerHtml="{{gifDayOrder2}}">
-                <!-- <img [src]="[gifDayOrder2]" alt="Tina" > -->
+  <carousel  [interval]=false #slider>
+    <slide *ngFor="let slides of gameSlides; let n = index">
+    
+      <section class="game-dashboad-bg game-dashboard-block" [ngStyle]="{'background-image': 'url(' + backroundDayOrder + ')'}">
+        <div class="container">
+          <div class="row game-block">
+            <div class="col-lg-4 col-md-4 col-sm-4">
+              <!-- <div class="tina clearfix" id="fiximg-1" innerHtml="{{gifDayOrder}}">
+              
+              </div> -->
+              <div class="tina clearfix" id="fiximg-2" innerHtml="{{gifDayOrder2}}">
+                  <!-- <img [src]="[gifDayOrder2]" alt="Tina" > -->
+              </div>
             </div>
-          </div>
-          <div class="col-lg-8 col-md-8 col-sm-8">
-            <ng-container *ngIf="gameCount == 1;">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" *ngFor="let games of slides.page; let i = index">
-                <div  class="gamelisting clearfix" id="{{games.id}}">
-
-                      <div class="game-img-holder clearfix">
-                        <img src="{{gameThumbs}}{{games.games_folder}}game_thumb/thumb.png" (click) = "slideClick(games.games_folder,gender)" (mouseover)='slideHover(games.games_folder,gender)' (mouseout)='slideOut(games.games_folder)'
-                        /></div>
-                      <!-- <div style="font-size: 18px" class="game-title clearfix game-title">{{games.games_name}}</div> -->
-                      <div class="game-ply-btn clearfix">
-                        <ng-container *ngIf="childCheck == 0" >
-                            <a><img style="margin-right: 5vh" src="assets/images/play-btn.png"   class="ply-btn"/></a>
-                        </ng-container>
-                        <ng-container *ngIf="childCheck == 1" >
-                            <a><img style="margin-right: 5vh" src="assets/images/play-btn.png" (click)="playClick(games.games_folder,games.games_id,gender)" (mouseover)='playHover()' (mouseout)='playOut()'  class="ply-btn"/></a>
-                        </ng-container>
-                      </div>
-
-                </div>
-            </div>
-          </ng-container>
-          <ng-container *ngIf="gameCount  > 1;">
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" *ngFor="let games of slides.page; let i = index">
+            <div class="col-lg-8 col-md-8 col-sm-8">
+              <ng-container *ngIf="gameCount == 1;">
+              <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" *ngFor="let games of slides.page; let i = index">
                   <div  class="gamelisting clearfix" id="{{games.id}}">
-
+                      <div class="">
+                          <span></span>
+                        </div>
                         <div class="game-img-holder clearfix">
                           <img src="{{gameThumbs}}{{games.games_folder}}game_thumb/thumb.png" (click) = "slideClick(games.games_folder,gender)" (mouseover)='slideHover(games.games_folder,gender)' (mouseout)='slideOut(games.games_folder)'
                           /></div>
-                        <!-- <div class="game-title clearfix game-title">{{games.games_name}}</div> -->
+                        <div style="font-size: 18px" class="game-title clearfix game-title">{{games.game_number}}</div>
                         <div class="game-ply-btn clearfix">
-                            <ng-container *ngIf="childCheck == 0" >
-                                <a><img style="margin-right: 5vh" src="assets/images/play-btn.png"   class="ply-btn"/></a>
-                            </ng-container>
-                            <ng-container *ngIf="childCheck == 1" >
-                                <a><img style="margin-right: 5vh" src="assets/images/play-btn.png" (click)="playClick(games.games_folder,games.games_id,gender)" (mouseover)='playHover()' (mouseout)='playOut()'  class="ply-btn"/></a>
-                            </ng-container>
-                        </div>
+                          <a>
+                          <img style="margin-right: 5vh" src="https://cdnncschoolapplication.azureedge.net/assets/images/play-btn.png" (click)="playClick(games.games_folder,games.games_id,gender)" (click)="playClick(games.games_folder,games.games_id,gender)" (mouseover)='playHover()' (mouseout)='playOut()'  class="ply-btn"/></a></div>
+    
                   </div>
               </div>
-          </ng-container>
-
+            </ng-container>
+            <ng-container *ngIf="gameCount > 1;">
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" *ngFor="let games of slides.page; let i = index">
+                    <div  class="gamelisting clearfix" id="{{games.id}}">
+    
+                          <div class="game-img-holder clearfix">
+                            <img src="{{gameThumbs}}{{games.games_folder}}game_thumb/thumb.png" (click) = "slideClick(games.games_folder,gender)" (mouseover)='slideHover(games.games_folder,gender)' (mouseout)='slideOut(games.games_folder)'
+                            /></div>
+                          <div class="game-title clearfix game-title">{{games.game_number}}</div>
+                          <div class="game-ply-btn clearfix">
+                            <a>
+                            <img src="https://cdnncschoolapplication.azureedge.net/assets/images/play-btn.png" (click)="playClick(games.games_folder,games.games_id,gender)" (click)="playClick(games.games_folder,games.games_id,gender)" (mouseover)='playHover()' (mouseout)='playOut()' class="ply-btn"/></a></div>
+                    </div>
+                </div>
+            </ng-container>
+    
+            </div>
           </div>
         </div>
-      </div>
-    </section>
-  </slide>
-
-
-</carousel>
+      </section>
+    </slide>
+    
+    
+    </carousel>
 </ng-container>
 </div>
 </div>
